<resources>
    <string name="app_name">Time To Roll</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_set_location">SetLocation</string>
    <string name="title_add_event">Add a New Event</string>
    <string name="title_activity_speed_prompt">SpeedPrompt</string>
    <string name="new_event_title">Add a New Event</string>
    <string name="location_hint">Location Name</string>
    <string name="event_title">Event Name</string>
    <string name="event_label">Event:</string>
    <string name="loc_label">Location:</string>
    <string name="date_label">Date:</string>
    <string name="theDate">Event Date</string>
    <string name="time_label">Time:</string>
    <string name="theTime">Event Time</string>
    <string name="create_event">ADD EVENT</string>

</resources>
