<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.david.hciprototype.NewActivity">

    <TextView
        style="@style/LargeTextFullWidth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/new_event_title"
        android:id="@+id/textView3"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/eventLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_label"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />

    <EditText
        style="@style/LargeTextFullWidth"
        android:id="@+id/eventTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:hint="@string/event_title"
        android:singleLine="true"
        android:layout_below="@+id/eventLabel"
    />

    <TextView
        android:id="@+id/locLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:text="@string/loc_label"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_below="@+id/eventTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />

    <AutoCompleteTextView
        android:id="@+id/locMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Search My Places"
        android:singleLine="true"
        android:layout_below="@+id/locLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_weight="0.5"
        android:textSize="30dp"
        android:maxWidth="10dp"
        android:layout_toLeftOf="@+id/addLocation"
        android:layout_toStartOf="@+id/addLocation" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:id="@+id/addLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/locMenu"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_weight="1"
        android:text="+"
        android:textSize="30dp" />


    <TextView
        android:id="@+id/dateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_label"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_below="@+id/locMenu"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
/>

    <EditText
        style="@style/LargeTextFullWidth"
        android:id="@+id/theDate"
        android:text=""
        android:singleLine="true"
        android:hint="@string/theDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dateLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/timeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_label"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_below="@+id/theDate"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"/>

    <EditText
        style="@style/LargeTextFullWidth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/theTime"
        android:text=""
        android:hint="@string/theTime"
        android:singleLine="true"
        android:layout_below="@+id/timeLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        style="@style/LargeTextFullWidth"
        android:id="@+id/createEvent"
        android:text="Create Event"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />




</RelativeLayout>
